# OpenAI_API_Adapter-Google

./: Cargo.toml  README.md
src/: app_state.rs  cli.rs  main.rs  proxy.rs  transformers.rs  utils.rs
