[package]
name = "google_api_openai_adaptor"
version = "0.1.6"
edition = "2021"

[dependencies]
actix-web = { version = "4" }
awc = { version = "3", features = ["rustls-0_23-native-roots"] }
futures-util = "0.3"
rustls = "0.23"
rustls-platform-verifier = "0.4"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
base64 = "0.22"
